[backend] Refact to prevent duplicate values generated by the left join in the filter